--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -28,6 +28,31 @@
                 </td>
                 
             </ng-container>
+
+            <!-- actions Column -->
+            <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef>
+
+                    <button mat-mini-fab color="primary" aria-label="add course">
+                        <mat-icon (click) = "onAdd()">add</mat-icon>
+                    </button>
+
+                </mat-header-cell>
+
+                <mat-cell *matCellDef="let course">
+
+                    <button mat-icon-button color="primary" aria-label="edit course">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+
+                    <button mat-icon-button color="warn" aria-label="remove course">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+
+
+                </mat-cell>
+                
+            </ng-container>
         
         
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
