--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -42,11 +42,11 @@
                 <mat-cell *matCellDef="let course">
 
                     <button mat-icon-button color="primary" aria-label="edit course">
-                        <mat-icon>edit</mat-icon>
+                        <mat-icon (click) = "onEdit(course)">edit</mat-icon>
                     </button>
 
                     <button mat-icon-button color="warn" aria-label="remove course">
-                        <mat-icon>delete</mat-icon>
+                        <mat-icon (click) = "onRemove(course)">delete</mat-icon>
                     </button>
 
 
